--- a/notebooks/feature-engineering.ipynb
+++ b/notebooks/feature-engineering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "35d94891",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Config loaded: Project root = C:\\Users\\Administrator\\Desktop\\10Academy\\Week 5&6\\Week5-6-fraud-detection\n",
+      "Raw data path = C:\\Users\\Administrator\\Desktop\\10Academy\\Week 5&6\\Week5-6-fraud-detection\\data\\raw\n",
       "Feature Engineering Notebook Ready\n",
       "Project Root: C:\\Users\\Administrator\\Desktop\\10Academy\\Week 5&6\\Week5-6-fraud-detection\n"
      ]
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "eb59d752",
    "metadata": {},
    "outputs": [
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "e8208eea",
    "metadata": {},
    "outputs": [
@@ -260,7 +262,7 @@
        "4  NAUITBZFJKHWW    Ads  Safari   M   45  4.155831e+08      0             NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "140a2133",
    "metadata": {},
    "outputs": [
@@ -394,7 +396,7 @@
        "9  3.416747e+08  Australia"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "868387de",
    "metadata": {},
    "outputs": [
@@ -556,7 +558,7 @@
        "max                       1.0                 20.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "93d839ef",
    "metadata": {},
    "outputs": [
@@ -652,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "f85e10d2",
    "metadata": {},
    "outputs": [
@@ -704,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "c86a020d",
    "metadata": {},
    "outputs": [
@@ -757,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "9cc56cb4",
    "metadata": {},
    "outputs": [
@@ -795,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "74c7e8b3",
    "metadata": {},
    "outputs": [
